# Ixmp3

./: CMakeLists.txt  LICENSE  README.md  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  unistall.sh
